<resources>
    <string name="app_name">CALCULATOR</string>
    <string name="calc_text">1234567890</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Add">+</string>
    <string name="Subtract">-</string>
    <string name="CLEAR">CLEAR</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="EQUALS">=</string>
    <string name="Dot">.</string>
</resources>