<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:textStyle=""
        android:layout_height="250dp"
        android:background="@color/scn1"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"

 />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:id="@+id/btn7"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn8"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn9"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:id="@+id/btndivide"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Divide"
           android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >


            <Button
                android:id="@+id/btn4"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_4"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btn5"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_5"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btn6"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_6"
                tools:ignore="UsingOnClickInXml" />


            <Button
                android:id="@+id/btnmultiply"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onOperator"
                android:text="@string/Multiply"
                android:textColor="@color/black"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:id="@+id/btn1"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn2"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn3"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:id="@+id/btnsubtract"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Subtract"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/btndot"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onDecimalPoint"
                    android:text="@string/Dot"
                    android:textColor="@color/black"
                    tools:ignore="UsingOnClickInXml" />


                <Button
                    android:id="@+id/btnnull"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onDigit"
                    android:text="@string/_0"
                    tools:ignore="UsingOnClickInXml" />

                <Button
                    android:id="@+id/btnequal"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onEqual"
                    android:text="@string/EQUALS"
                    android:textColor="@color/black"
                    tools:ignore="UsingOnClickInXml" />

                <Button
                    android:id="@+id/btnadd"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onOperator"
                    android:text="@string/plus"
                    android:textColor="@color/black"
                    tools:ignore="UsingOnClickInXml" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:id="@+id/btnclr"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:onClick="onClear"
            android:text="@string/CLEAR"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>






</LinearLayout>